# Copyright 2018-2023 the Deno authors. All rights reserved. MIT license.
# Copyright 2023 Jo Bates. All rights reserved. MIT license.

[package]
name = "denox_webgpu"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "WebGPU implementation for Denox"

[dependencies]
deno_core.workspace = true
raw-window-handle = "0.4"
serde.workspace = true
tokio.workspace = true
wgpu-core = { version = "0.13", features = ["trace", "replay", "serde", "raw-window-handle"] }
wgpu-types = { version = "0.13", features = ["trace", "replay", "serde"] }
