# Copyright 2018-2023 the Deno authors. All rights reserved. MIT license.
# Copyright 2023 Jo Bates. All rights reserved. MIT license.

[package]
name = "denox_webgpu"
version = "0.3.0"
authors = ["the Deno authors", "Jo Bates"]
edition.workspace = true
license = "MIT"
readme = "README.md"
repository.workspace = true
description = "WebGPU implementation for Denox"

[dependencies]
deno_core.workspace = true
raw-window-handle.workspace = true
serde.workspace = true
tokio.workspace = true
wgpu-types = { workspace = true, features = ["trace", "replay", "serde"] }

[dependencies.wgpu-core]
workspace = true
features = ["trace", "replay", "serde", "strict_asserts", "wgsl", "gles", "raw-window-handle"]

# We want the wgpu-core Metal backend on macOS and iOS.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.wgpu-core]
workspace = true
features = ["metal"]

# We want the wgpu-core Direct3D backends on Windows.
[target.'cfg(windows)'.dependencies.wgpu-core]
workspace = true
features = ["dx11", "dx12"]

# We want the wgpu-core Vulkan backend on Unix (but not Emscripten) and Windows.
[target.'cfg(any(windows, all(unix, not(target_arch = "emscripten"))))'.dependencies.wgpu-core]
workspace = true
features = ["vulkan"]
