# Copyright 2023 Jo Bates. All rights reserved. MIT license.

[package]
name = "denog_wsi"
version = "0.7.2"
authors = ["Jo Bates"]
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Window system integration for Denog"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
deno_webgpu.workspace = true
raw-window-handle.workspace = true
serde.workspace = true
tokio.workspace = true
winit = "0.28.3"
